INTYGFV-14370: Switched outdated test package unitils to bom dependency assertj. Included switch to newer apache.commons.lang3 package.